--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@react-three/drei": "^10.0.6",
+        "lucide-react": "^0.488.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-three-fiber": "^6.0.13"
