--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-dialog": "^1.1.10",
         "@react-three/drei": "^10.0.6",
         "@use-gesture/react": "^10.3.1",
         "lucide-react": "^0.488.0",
