--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "dependencies": {
         "@radix-ui/react-dialog": "^1.1.10",
         "@react-three/drei": "^10.0.6",
+        "@react-three/fiber": "^9.1.2",
         "@use-gesture/react": "^10.3.1",
         "lucide-react": "^0.488.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-three-fiber": "^6.0.13"
+        "three": "^0.175.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
