--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "@radix-ui/react-dialog": "^1.1.10",
         "@react-three/drei": "^10.0.6",
         "@react-three/fiber": "^9.1.2",
+        "@tanstack/react-query": "^5.74.4",
         "@use-gesture/react": "^10.3.1",
+        "axios": "^1.8.4",
         "lucide-react": "^0.488.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
