--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@radix-ui/react-dialog": "^1.1.10",
         "@react-three/drei": "^10.0.6",
         "@react-three/fiber": "^9.1.2",
+        "@splidejs/react-splide": "^0.7.12",
+        "@splidejs/splide": "^4.1.4",
         "@tanstack/react-query": "^5.74.4",
         "@use-gesture/react": "^10.3.1",
         "axios": "^1.8.4",
